Enable MQTT, update motor direction, and adjust module config.
MQTT support is now enabled, motor direction reversed, and the number of modules increased to 12. FORCE_FULL_ROTATION is disabled, and additional IDE-specific directories (.idea, .vscode) are added to the .gitignore file. These changes prepare the project for updated hardware and functionality requirements.

--- a/platformio.ini
+++ b/platformio.ini
@@ -88,10 +88,10 @@ lib_deps =
 build_flags =
     -DSPI_IO=true
     -DSPLITFLAP_PIO_HARDWARE_CONFIG
-    -DREVERSE_MOTOR_DIRECTION=false
+    -DREVERSE_MOTOR_DIRECTION=true
     
     ; Set to true to enable MQTT support (see secrets.h.example for configuration)
-    -DMQTT=false
+    -DMQTT=true
 
     ; Set to true to enable HTTP support (see secrets.h.example for configuration)
     -DHTTP=false
@@ -120,7 +120,7 @@ extends=esp32base
 build_flags =
     ${esp32base.build_flags}
     -DCHAINLINK
-    -DNUM_MODULES=6
+    -DNUM_MODULES=12
 
 [env:chainlinkBase]
 extends=esp32base
@@ -158,4 +158,4 @@ build_type = debug
 extends=esp32base
 build_flags =
     ${esp32base.build_flags}
-    -DNUM_MODULES=6
+    -DNUM_MODULES=12
